k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE_NAME}
  labels:
    app: ${POD_NAME}
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default":"${BACKEND_CONFIG_NAME}"}'
    external-dns.alpha.kubernetes.io/hostname: ${HOSTNAME}.
spec:
  selector:
    app: ${POD_NAME}
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
