k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${INGRESS_NAME}
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: ${STATIC_IP_NAME}
    kubernetes.io/ingress.allow-http: "true"
    networking.gke.io/managed-certificates: ${MANAGED_CERT_NAME}
    networking.gke.io/v1beta1.FrontendConfig: ${FRONTEND_CONFIG_NAME}
    external-dns.alpha.kubernetes.io/hostname: ${HOSTNAME}.
spec:
  rules:
    - host: ${HOSTNAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${SERVICE_NAME}
                port:
                  number: 80
